--- a/templates/customer/index-customer.html
+++ b/templates/customer/index-customer.html
@@ -7,14 +7,14 @@
 
 {% block content %}
 
-<section class="hero is-medium is-black">
+<section id="index-hero" class="hero is-large is-black">
     <div class="hero-body">
-      <div class="container">
-        <h1 class="title is-size-1 has-text-weight-bold">
+      <div class="container has-text-centered">
+        <h1 class="title has-text-weight-bold" style="font-size: 5rem;">
           Tourister
         </h1>
-        <h2 class="subtitle">
-          Tours By Locals, for Locals
+        <h2 class="subtitle is-size-3">
+          Tours by Locals, for Locals
         </h2>
       </div>
     </div>
