--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,13 @@
-.skyline-bg {
-    background-image: url('../imgs/bg/skyline-bg.jpg');
+#index-hero {
+    background: url("/imgs/index.jpg") center scroll no-repeat;
+    background-size: cover;
+    background-color: rgba(0,0,0,0.55);
+    background-blend-mode: overlay;
 }
+
+#index-hero * {
+    text-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+}
+/* .skyline-bg {
+    background-image: url('../imgs/bg/skyline-bg.jpg');
+} */
