--- a/templates/helpdesk.html
+++ b/templates/helpdesk.html
@@ -2,19 +2,25 @@
 
 {% block scripts %}
 <link rel="stylesheet" href="/css/shop.css">
-<link rel="stylesheet" href="/css/index.css">
 {% endblock %}
 
 {% block content %}
-<section class='section'>
-    <div class="content has-text-centered">
-        <h1>Hi, How can we help?</h1>
-        <p>Drop us a message and we will get back to you ASAP</p>
+<section class="hero is-medium is-black">
+    <div class="hero-body">
+        <div class="container has-text-centered">
+            <h1 class="title has-text-weight-bold" style="font-size: 3rem;">
+                Hi, How can we help?
+            </h1>
+            <h2 class="subtitle is-size-4">
+                Drop us a message and we will get back to you soon
+            </h2>
+        </div>
     </div>
-
+</section>
+<section class='section'>
     <div class='columns is-centered'>
         <div class='column is-half'>
-            <div class='box'>
+            <div class='box p-6'>
                 <form class="form-horizontal" enctype="multipart/form-data">
                     <fieldset>
 
@@ -22,51 +28,52 @@
                         <legend class='label'>Tour Title</legend>
 
                         <div class="field">
-                        <label class="label" for="tour-title"></label>
-                        <div class="control">
-                            <input id="tour-title" name="tour-title" type="text" class="input " required="">
+                            <label class="label" for="tour-title"></label>
+                            <div class="control">
+                                <input id="tour-title" name="tour-title" type="text" class="input " required="">
 
-                        </div>
+                            </div>
                         </div>
 
 
                         <label class="label" for="tour-img">Tour Image</label>
                         <div class="file">
-                        <label class="file-label">
-                            <input class="file-input" type="file" name="tour-img" onchange="if (this.files.length > 0) document.getElementById('filename-tour-img').innerHTML = this.files[0].name;">
-                            <span class="file-cta">
-                            <span class="file-icon">
-                                <i class="fa fa-upload"></i>
-                            </span>
-                            <span class="file-label" id="filename-tour-img">
-                                Choose a file…
-                            </span>
-                            </span>
-                        </label>
+                            <label class="file-label">
+                                <input class="file-input" type="file" name="tour-img"
+                                    onchange="if (this.files.length > 0) document.getElementById('filename-tour-img').innerHTML = this.files[0].name;">
+                                <span class="file-cta">
+                                    <span class="file-icon">
+                                        <i class="fa fa-upload"></i>
+                                    </span>
+                                    <span class="file-label" id="filename-tour-img">
+                                        Choose a file…
+                                    </span>
+                                </span>
+                            </label>
                         </div>
 
                         <div class="field">
-                        <label class="label" for="tour-desc">Tour Description</label>
-                        <div class="control">
-                            <textarea class="textarea" id="tour-desc" name="tour-desc"></textarea>
-                        </div>
-                        </div>
-
-
-                        <div class="field">
-                        <label class="label" for="tour-price">Minimum Price</label>
-                        <div class="control">
-                            <input id="tour-price" name="tour-price" type="text" class="input ">
-
-                        </div>
+                            <label class="label" for="tour-desc">Tour Description</label>
+                            <div class="control">
+                                <textarea class="textarea" id="tour-desc" name="tour-desc"></textarea>
+                            </div>
                         </div>
 
 
                         <div class="field">
-                        <label class="label" for="tour-submit"></label>
-                        <div class="control">
-                            <button id="tour-submit" name="tour-submit" class="button is-success">List!</button>
+                            <label class="label" for="tour-price">Minimum Price</label>
+                            <div class="control">
+                                <input id="tour-price" name="tour-price" type="text" class="input ">
+
+                            </div>
                         </div>
+
+
+                        <div class="field">
+                            <label class="label" for="tour-submit"></label>
+                            <div class="control">
+                                <button id="tour-submit" name="tour-submit" class="button is-success">List!</button>
+                            </div>
                         </div>
 
                     </fieldset>
