--- a/templates/tourGuides/dashboard.html
+++ b/templates/tourGuides/dashboard.html
@@ -3,13 +3,14 @@
 {% block scripts %}
 <!--<link rel="stylesheet" href="/css/shop.css">-->
 <link rel="stylesheet" href="/css/navbar.css">
+<link rel="stylesheet" href="/css/workdesk.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"
     integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw=="
     crossorigin="anonymous"></script>
 {% endblock %}
 
 {% block content %}
-<section class="hero is-light">
+<section id="workdesk-hero" class="hero is-dark is-medium">
     <div class="hero-body">
         <div class="container">
             <h1 class="title">
