--- a/templates/helpdesk.html
+++ b/templates/helpdesk.html
@@ -59,6 +59,21 @@
                             </div>
                         </div>
 
+                        <label class="label" for="support-img"></label>
+                        <div class="file">
+                        <label class="file-label">
+                            <input class="file-input" type="file" name="tour-img" onchange="if (this.files.length > 0) document.getElementById('filename-tour-img').innerHTML = this.files[0].name;">
+                            <span class="file-cta">
+                            <span class="file-icon">
+                                <i class="fa fa-upload"></i>
+                            </span>
+                            <span class="file-label" id="filename-tour-img">
+                                Choose a file…
+                            </span>
+                            </span>
+                        </label>
+                        </div>
+                        <br>
                         <div class="field">
                             <div class="control">
                                 <button class="button is-success is-fullwidth">Send us a message</button>
