Added db functionallity

--- a/templates/baseTour.html
+++ b/templates/baseTour.html
@@ -56,6 +56,9 @@
                     <a class="navbar-item has-text-danger-dark" href="{{url_for('home')}}">
                         <i class="fas fa-arrow-left"></i>&ensp;Buyer mode
                     </a>
+                    <a class="navbar-item is-success has-text-success is-vcentered" href="{{url_for('makelisting')}}">
+                        <i class="fas fa-plus"></i>&ensp;Add a listing
+                    </a>
                     <a class="navbar-item" href="{{url_for('all_businesses')}}">
                         <i class="fas fa-briefcase"></i>
                     </a>
