--- a/templates/helpdesk.html
+++ b/templates/helpdesk.html
@@ -26,7 +26,7 @@
                                 <div class="select">
                                     <select>
                                         <option>General Enquiries</option>
-                                        <option>Apply for Pro Verified</option>
+                                        <option>Apply for Verified</option>
                                     </select>
                                 </div>
                             </div>
