--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,7 +14,7 @@
     <div class="column is-one-quarter">
         <div class="section">
             <div class="box is-centered">
-                <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
+                <div class="profile-img" style="background-image: url('/public/pfp.jpg');"></div>
                 <p class="title is-5 is-spaced">HideThePain69</p>
                 <p class="subtitle is-6">What is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry's standard dummy</p>
             </div>
