--- a/templates/baseAdmin.html
+++ b/templates/baseAdmin.html
@@ -31,7 +31,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <a class="navbar-item has-text-weight-bold" href="{{url_for('adminDashboard')}}">Tourister&nbsp;<span
-                        class="has-text-danger">Admin</span></a>
+                        class="has-text-danger has-text-weight-normal">Admin</span></a>
 
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false">
                     <span aria-hidden="true"></span>
