Change navbar-item hrefs

--- a/templates/baseAdmin.html
+++ b/templates/baseAdmin.html
@@ -48,10 +48,10 @@
                     <a class="navbar-item" href="{{url_for('adminDashboard')}}">
                         Home
                     </a>
-                    <a class="navbar-item" href="/help">
+                    <a class="navbar-item" href="{{url_for('adminUsers')}}">
                         Manage Users
                     </a>
-                    <a class="navbar-item" href="/help">
+                    <a class="navbar-item" href="{{url_for('adminListings')}}">
                         Manage Listings
                     </a>
                 </div>
